--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,6 +4,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge' />
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
     <title>My Restaurant List</title>
+    <link rel='stylesheet' href='/stylesheets/bootstrap.css' />
   </head>
   <body>
     <header>
@@ -28,5 +29,8 @@
 
     <!-- partial templates: search bar 、 restaurant list -->
     {{{body}}}
+    <script src='/javascripts/jquery-3.3.1.js'></script>
+    <script src='/javascripts/popper.js'></script>
+    <script src='/javascripts/bootstrap.js'></script>
   </body>
 </html>
