--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,6 +5,11 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
     <title>My Restaurant List</title>
     <link rel='stylesheet' href='/stylesheets/bootstrap.css' />
+    <script
+      src='https://kit.fontawesome.com/eb8c9199fd.js'
+      crossorigin='anonymous'
+    ></script>
+    <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
     <header>
