--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -30,29 +30,31 @@
   <div class='row'>
     <div class='col-md-10 col-12 mx-auto'>
       <div class='card-columns'>
-        <a href='/restaurants/{{restaurant.id}}' class='text-secondary'>
-          <div class='card mb-3'>
-            <img
-              class='card-img-top'
-              src='{{restaurant.image}}'
-              alt='{{restaurant.name}}'
-            />
-            <div class='card-body p-3'>
-              <h6 class='card-title mb-1'>{{restaurant.name}}</h6>
+        {{#each restaurants}}
+          <a href='/restaurants/{{this.id}}' class='text-secondary'>
+            <div class='card mb-3'>
+              <img
+                class='card-img-top'
+                src='{{this.image}}'
+                alt='{{this.name}}'
+              />
+              <div class='card-body p-3'>
+                <h6 class='card-title mb-1'>{{this.name}}</h6>
 
-              <div class='restaurant-category mb-1'>
-                <i class='fas fa-utensils pr-2'></i>
-                {{restaurant.category}}
+                <div class='restaurant-category mb-1'>
+                  <i class='fas fa-utensils pr-2'></i>
+                  {{this.category}}
+                </div>
+
+                <span class='badge badge-pill badge-danger font-weight-normal'>
+                  {{this.rating}}
+                  <i class='fas fa-star fa-xs'></i>
+                </span>
+
               </div>
-
-              <span class='badge badge-pill badge-danger font-weight-normal'>
-                {{restaurant.rating}}
-                <i class='fas fa-star fa-xs'></i>
-              </span>
-
             </div>
-          </div>
-        </a>
+          </a>
+        {{/each}}
       </div>
     </div>
   </div>
